--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "recipevision",
-  "version": "1.0.0",
-  "description": "cst 438 project 1",
+  "name": "node-js-getting-started",
+  "version": "0.2.6",
+  "description": "A sample Node.js app using Express 4",
+  "engines": {
+    "node": "6.11.1"
+  },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "test": "node test.js"
+  },
+  "dependencies": {
+    "ejs": "2.5.6",
+    "express": "4.15.2"
+  },
+  "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ryanbbq/paceMaker.git"
+    "url": "https://github.com/heroku/node-js-getting-started"
   },
-  "author": "Ryan Le Bon",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ryanbbq/paceMaker/issues"
-  },
-  "homepage": "https://github.com/Ryanbbq/paceMaker#readme",
-  "dependencies": {
-    "express": "^4.16.1"
-  },
-  "devDependencies": {},
   "keywords": [
-    "recipes",
-    "google",
-    "api",
-    "vison"
-  ]
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
