--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node test.js"
+  
+    "test": "node ./node_modules/mocha/bin/mocha"
   },
   "dependencies": {
     "ejs": "2.5.6",
