--- a/package.json
+++ b/package.json
@@ -1,33 +1,32 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.2.6",
-  "description": "A sample Node.js app using Express 4",
-  "engines": {
-    "node": "6.11.1"
-  },
+  "name": "recipevision",
+  "version": "1.0.0",
+  "description": "A web application that searches for recipes",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-  
-    "test": "mocha"
-  },
   "dependencies": {
-    "ejs": "2.5.6",
-    "express": "4.15.2"
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "morgan": "^1.9.0"
   },
-  "devDependencies": {
-    "request": "^2.81.0",
-    "tape": "^4.7.0"
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "git+https://github.com/Ryanbbq/paceMaker.git"
   },
   "keywords": [
-    "node",
+    "vision",
+    "google",
+    "pacemaker",
     "heroku",
-    "express"
+    "npm"
   ],
-  "license": "MIT"
+  "author": "Ryan Le Bon",
+  "license": "SEE LICENSE IN readme.md",
+  "bugs": {
+    "url": "https://github.com/Ryanbbq/paceMaker/issues"
+  },
+  "homepage": "https://github.com/Ryanbbq/paceMaker#readme"
 }
-
