--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "material-ui": "^1.0.0-beta.22",
     "morgan": "^1.9.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
