--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "path": "^0.12.7"
+    "mysql": "^2.15.0",
+    "path": "^0.12.7",
+    "socket.io": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
