--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "morgan": "^1.9.0",
+    "mysql": "*",
     "path": "^0.12.7"
   },
   "devDependencies": {},
